--- a/assets/style.css
+++ b/assets/style.css
@@ -1,133 +1,114 @@
-/* Basic Style */
+/* Include the padding and border in an element's total width and height */
 * {
-  padding: 0;
-  margin: 0;
   box-sizing: border-box;
 }
 
-body {
-  background: #fff;
-  color: #333;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  font-weight: 500;
-  background-color: rgb(135, 206, 235);
-  max-width: 100%;
+/* Remove margins and padding from the list */
+ul {
+  margin: 0;
+  padding: 0;
 }
 
-main {
-  width: 40%;
-  margin: 20px auto 20px;
+/* Style the list items */
+ul li {
+  cursor: pointer;
+  position: relative;
+  padding: 12px 8px 12px 40px;
+  background: #eee;
+  font-size: 18px;
+  transition: 0.2s;
+
+  /* make the list items unselectable */
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
-.container {
-  display: block;
-  width: 100%;
-  background-color: #fff;
-  padding: 0px 10px 10px 10px;
-  border-radius: 10px;
+/* Set all odd list items to a different color (zebra-stripes) */
+ul li:nth-child(odd) {
+  background: #f9f9f9;
 }
 
-/* Header */
-header h2 {
+/* Darker background-color on hover */
+ul li:hover {
+  background: #ddd;
+}
+
+/* When clicked on, add a background color and strike out text */
+ul li.checked {
+  background: #888;
+  color: #fff;
+  text-decoration: line-through;
+}
+
+/* Add a "checked" mark when clicked on */
+ul li.checked::before {
+  content: '';
+  position: absolute;
+  border-color: #fff;
+  border-style: solid;
+  border-width: 0 2px 2px 0;
+  top: 10px;
+  left: 16px;
+  transform: rotate(45deg);
+  height: 15px;
+  width: 7px;
+}
+
+/* Style the close button */
+.close {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 12px 16px 12px 16px;
+}
+
+.close:hover {
+  background-color: #f44336;
+  color: white;
+}
+
+/* Style the header */
+.header {
+  background-color: #f44336;
+  padding: 30px 40px;
+  color: white;
   text-align: center;
-  padding-top: 10px;
-  margin-bottom: 0;
 }
-header .new-task-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin: 24px auto 0;
-  border-bottom: 2px solid #333;
-  text-transform: uppercase;
+
+/* Clear floats after the header */
+.header:after {
+  content: "";
+  display: table;
+  clear: both;
 }
-header h3 {
-  padding: 20px 0 8px;
-  font-weight: 700;
+
+/* Style the input */
+input {
+  margin: 0;
+  border: none;
+  border-radius: 0;
+  width: 75%;
+  padding: 10px;
+  float: left;
   font-size: 16px;
-  color: #333;
 }
 
-header #add-button {
-  border: 0;
-  color: #fff;
-  font-size: 16px;
-  cursor: pointer;
-  padding: 8px;
-  border-radius: 8px;
-  outline: none;
-  background-color: rgb(127, 255, 212);
-}
-
-header #add-button:hover {
-  background-color: rgb(28, 161, 116);
-}
-
-/******section*****/
-section .task {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 24px 0 2px;
-  border-bottom: 1px solid #eee;
-  margin-top: 8px;
-  margin-bottom: 12px;
-}
-section .new-task-input {
-  padding: 0 6px;
-  background: #fff;
-  border-radius: 6px;
-  border: 1px solid #ddd;
-  line-height: 32px;
-  font-size: 16px;
-  color: #888;
-  width: 70%;
-  outline: none;
-  margin-left: 6px;
-}
-
-section .new-task-input:focus {
-  color: #333;
-}
-section .actions{
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-section button {
-  border: 0px;
-  color: #fff;
+/* Style the "Add" button */
+.addBtn {
+  padding: 10px;
+  width: 25%;
+  background: #d9d9d9;
+  color: #555;
+  float: left;
+  text-align: center;
   font-size: 16px;
   cursor: pointer;
-  padding: 8px;
-  margin: 8px;
-  border-radius: 8px;
-  outline: none;
+  transition: 0.3s;
+  border-radius: 0;
 }
 
-section button:hover {
-  color: #333;
-}
-
-section .edit-button {
-  background-color: rgb(201, 201, 201);
-}
-
-section .edit-button:hover {
-  background-color: rgb(136, 136, 136);
-}
-
-section .delete-button {
-  background-color: rgb(247, 98, 98);
-}
-
-section .delete-button:hover {
-  background-color: rgb(255, 0, 0);
-}
-
-@media screen and (max-width: 900px) {
-  main {
-    width: 90%;
-    margin: 10px auto 10px;
-  }
+.addBtn:hover {
+  background-color: #bbb;
 }
