--- a/assets/style.css
+++ b/assets/style.css
@@ -1,114 +1,148 @@
-/* Include the padding and border in an element's total width and height */
-* {
-  box-sizing: border-box;
+root{
+    --lightgreen : #00c78a;
+    --orange: #ff9c27;
+    --bg:#162719;
+    --primarytext: #f2e8cf;
 }
 
-/* Remove margins and padding from the list */
-ul {
-  margin: 0;
-  padding: 0;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background: #f2e8cf;
+}
+header{
+    padding: 2rem 1rem;
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
+}
+header h1{
+    font-size: 2.5rem;
+    font-weight: 400;
+    color: var(--primarytext);
+    margin-bottom: 1.5rem;
+}
+#task-form{
+    display: flex;
 }
 
-/* Style the list items */
-ul li {
-  cursor: pointer;
-  position: relative;
-  padding: 12px 8px 12px 40px;
-  background: #eee;
-  font-size: 18px;
-  transition: 0.2s;
-
-  /* make the list items unselectable */
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+input,button{
+    appearance: none;
+    border: none;
+    outline: none;
+    background: none;
 }
 
-/* Set all odd list items to a different color (zebra-stripes) */
-ul li:nth-child(odd) {
-  background: #f9f9f9;
+#task-input{
+    flex: 1 1 0%;
+    background-color: var(--bg);
+    padding: 1rem;
+    border: 1px solid var(--primarytext);
+    border-radius: 1rem;
+    margin-right: 1rem;
+    color: var(--primarytext);
+    font-size: 1.25rem;
 }
 
-/* Darker background-color on hover */
-ul li:hover {
-  background: #ddd;
+#task-input::placeholder{
+    color: var(--primarytext);
+}
+#task-submit{
+    color: var(--primarytext);
+    font-size: 1.25rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: 0.4s;
+    border: 1px solid var(--primarytext);
+    border-radius: 1rem;
+    padding: 1rem;
 }
 
-/* When clicked on, add a background color and strike out text */
-ul li.checked {
-  background: #888;
-  color: #fff;
-  text-decoration: line-through;
+#task-submit:hover{
+    opacity: 0.8;
 }
 
-/* Add a "checked" mark when clicked on */
-ul li.checked::before {
-  content: '';
-  position: absolute;
-  border-color: #fff;
-  border-style: solid;
-  border-width: 0 2px 2px 0;
-  top: 10px;
-  left: 16px;
-  transform: rotate(45deg);
-  height: 15px;
-  width: 7px;
+#task-submit:active{
+    opacity: 0.6;
+}
+.container{
+    background: var(--bg);
+    flex: 0% 1 0%;
+    max-width: 750px;
+    width: 100%;
+    margin: 2rem auto;
+    border-radius: 1rem;
+}
+main{
+    flex: 1 1 0%;
+    max-width: 700px;
+    width: 100%;
+    margin: 0 auto;
 }
 
-/* Style the close button */
-.close {
-  position: absolute;
-  right: 0;
-  top: 0;
-  padding: 12px 16px 12px 16px;
+.task-list{
+    padding: 1rem;
 }
 
-.close:hover {
-  background-color: #f44336;
-  color: white;
+#tasks .task{
+    display: flex;
+    justify-content: space-between;
+    background-color: var(--bg);
+    border: 1px solid var(--orange);
+    padding: 1rem;
+    border-radius: 1rem;
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+}
+#tasks .task .content{
+    flex: 1 1 0%;
+}
+#tasks .task .content .text{
+    color: var(--primarytext);
+    font-size: 1.13rem;
+    width: 100%;
+    display: block;
+    transition: 0.4s;
+}
+#tasks .task .content .text:not(:read-only){
+    color: var(--lightgreen);
+}
+#tasks .task .actions{
+    display: flex;
+    margin: 0 -0.5rem;
 }
 
-/* Style the header */
-.header {
-  background-color: #f44336;
-  padding: 30px 40px;
-  color: white;
-  text-align: center;
+.task .actions button{
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 800;
+    margin: 0 0.5rem;
+    text-transform: uppercase;
+    transition: 0.4s;
+}
+.task .actions button:hover{
+    opacity: 0.8;
 }
 
-/* Clear floats after the header */
-.header:after {
-  content: "";
-  display: table;
-  clear: both;
+.task .actions button:active{
+    opacity: 0.6;
+}
+.task .actions .Edit{
+    color: var(--lightgreen);
+}
+.task .actions .Delete{
+    color: crimson;
+}
+.task .actions .Completed{
+    color: var(--orange)
 }
 
-/* Style the input */
-input {
-  margin: 0;
-  border: none;
-  border-radius: 0;
-  width: 75%;
-  padding: 10px;
-  float: left;
-  font-size: 16px;
-}
-
-/* Style the "Add" button */
-.addBtn {
-  padding: 10px;
-  width: 25%;
-  background: #d9d9d9;
-  color: #555;
-  float: left;
-  text-align: center;
-  font-size: 16px;
-  cursor: pointer;
-  transition: 0.3s;
-  border-radius: 0;
-}
-
-.addBtn:hover {
-  background-color: #bbb;
+.strike {
+    text-decoration: line-through;
 }
