--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,4 @@
     --primarytext: #f2e8cf;
     
 }
-/* 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-} */
+/* Style the To-Do List  */
