--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,101 @@
-:root{
-    --lightgreen : #00c78a;
-    --orange: #ff9c27;
-    --bg:#162719;
-    --primarytext: #f2e8cf;
-    
+*, html{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 /* Style the To-Do List  */
+/* Import the background image */
+body {
+    background: url('../img/bg-desktop.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: 'Arial', sans-serif;
+    color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+  }
+  .task-container {
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 10px;
+    padding: 20px;
+    width: 96%;
+    max-width: 400px;
+    text-align: center;
+  }
+  .task-container h1 {
+    padding-bottom: 20px;
+    font-size: 2em;
+    font-weight: 500;
+    text-align: left;
+  }
+  form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+  }
+  form input {
+    flex: 1;
+    padding: 10px;
+    border-radius: 5px 0 0 5px;
+    border: none;
+    outline: none;
+    font-size: 1em;
+  }
+  form button {
+    padding: 10px;
+    border-radius: 0 5px 5px 0;
+    border: none;
+    background-color: #1c7ed6;
+    color: white;
+    cursor: pointer;
+    font-size: 1em;
+  }
+  form button:disabled {
+    background-color: #a1caed;
+    cursor: not-allowed;
+  }
+  ul {
+    list-style-type: none;
+  }
+  ul li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.1);
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+  }
+  ul li span {
+    flex: 2;
+    padding: 0 10px;
+    text-align: left;
+  }
+  ul li input{
+    border: none;
+    outline: none; 
+    padding: 4px;
+    border-radius: 2px;
+  }
+  ul li i {
+    cursor: pointer;
+  }
+  ul li .fa-circle {
+    color: #fff;
+  }
+  ul li .fa-circle-check {
+    color: #ccc;
+  }
+  ul li .fa-trash {
+    color: #f44336;
+    margin-left: 16px;
+  }
+  
+  ul li .fa-pen-to-square {
+    color: #1c7ed6;
+  }
+  ul li .fa-floppy-disk {
+    color: #4caf50;
+  }
